<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:textSize="26dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:textSize="26dp"
        android:layout_above="@id/login_password"
        android:hint="@string/username"/>



    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:hint="@string/login" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:src="@mipmap/myanimelist_logo"
        android:layout_above="@id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:id="@+id/imageView" />

</RelativeLayout>