<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/comic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comic_title_label"
        style = "?android:listSeparatorTextViewStyle"/>

    <ImageView
        android:id="@+id/comic_img"
        android:layout_below="@id/comic_title"
        android:layout_width="150dp"
        android:layout_height="200dp"
        />

   <TextView
       android:id="@+id/base"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_below="@id/comic_title"
       android:layout_toRightOf="@id/comic_img"
       android:text="Date Started: "/>
    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/base"
        android:layout_alignBaseline="@id/base"
        android:text="@string/default_date"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/base"
        android:layout_toRightOf="@id/comic_img"
        android:text="Date Finished: "/>

    <TextView
        android:id="@+id/finish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/base"
        android:layout_below="@id/start_date"
        android:text="@string/default_date"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish_date"
        android:layout_toLeftOf="@id/finish_date"
        android:text="Status: "/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/base"
        android:layout_below="@id/finish_date"
        android:text="@string/N_A"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/status"
        android:layout_below="@id/status"
        android:text="Chapters Read: "/>

    <TextView
        android:id="@+id/chapters_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_toRightOf="@id/base"
        android:text="@string/N_A"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/chapters_read"
        android:layout_toLeftOf="@id/chapters_read"
        android:text="Total Chapters:"/>

    <TextView
        android:id="@+id/total_chapters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chapters_read"
        android:layout_toRightOf="@id/base"
        android:text="@string/N_A"/>

    <Button
        android:id="@+id/comic_chapters"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:text="Chapters"/>



</RelativeLayout>